# GraphXplorer

./: .codex_resize_storm_before.txt  .codex_run_off_err.txt  .codex_run_on_out.txt  .codex_run_out.txt  .gitignore  CLAUDE.md  CMakeLists.txt  _build_msvc.bat  _build_release.bat  build_with_vsdev.cmd  vcpkg.json
.claude/: settings.json  settings.local.json
docs/: ARCHITECTURE.md  ARCHITECTURE_REWRITE.md  ARCHITECTURE_REWRITE_STATUS.md  INPUT_SCENARIO_RUNNER.md  TILE_REFINEMENT_PIPELINE.md
engine/: CMakeLists.txt  README.md
engine/app/: Engine.cpp  Engine.h  main_gui.cpp
engine/expr/: Ast.h  Parser.cpp  Parser.h  Program.cpp  Program.h  Relation.cpp  Relation.h
engine/image/: Png.cpp  Png.h
engine/math/: Interval.cpp  Interval.h  Round.h  Simd.h
engine/present/: GlPresenter.cpp  GlPresenter.h  Glass.cpp  Glass.h  Overlay.cpp  Overlay.h  Presenter.h
engine/solve/: Coverage.h  Solver.cpp  Solver.h  Trace.cpp  Trace.h
engine/tests/: EngineTests.cpp  ExprTests.cpp  IntervalTests.cpp  SimdMathTests.cpp  SolverTests.cpp  TraceTests.cpp
engine/tile/: Geometry.h  TileKey.h  TileStore.cpp  TileStore.h
engine/tools/: bench.cpp  render_png.cpp  repro_prio.cpp  repro_resize.cpp
include/staplegl/: staplegl.hpp
include/staplegl/modules/: gl_functions.hpp  shader.hpp  texture.hpp  utility.hpp
shader/: chunk.frag  chunk.vert  grid.frag  grid.vert  inputBox.frag  line.frag  line.vert  plot.frag  plot.vert  text.frag  text.vert
src/: main.cpp
src/App/: AppState.cpp  AppState.h  FrameBudgetController.cpp  FrameBudgetController.h  FramePipeline.cpp  FramePipeline.h  InteractionController.cpp  InteractionController.h  PresentationPlanner.cpp  PresentationPlanner.h  UiLayout.cpp  UiLayout.h
src/Compute/: AffineInequality.h  BatchOptimizer.cpp  BatchOptimizer.h  ComputeBackend.h  CpuComputeBackend.cpp  InequalityTileRefiner.cpp  InequalityTileRefiner.h  OpenClComputeBackend.cpp  TileJob.h  TilePlanner.cpp  TilePlanner.h  TileRuntime.cpp  TileRuntime.h  TileScheduler.cpp  TileScheduler.h  VisualCoverBuilder.cpp  VisualCoverBuilder.h
src/Core/: Application.cpp  Application.h  Input.cpp  Input.h  MainThreadRequestMailbox.cpp  MainThreadRequestMailbox.h  Window.cpp  Window.h
src/Formula/: Evaluator.cpp  Evaluator.h  Formula.cpp  Formula.h  FormulaCompiler.cpp  FormulaCompiler.h  Parser.cpp  Parser.h  Token.h  Tokenizer.cpp  Tokenizer.h
src/Graph/: ChunkTree.cpp  ChunkTree.h  Graph.h  GraphOperations.h
src/Math/: ChunkContourRasterizer.cpp  ChunkContourRasterizer.h  ChunkRegionRasterizer.cpp  ChunkRegionRasterizer.h  ChunkRenderer.h  ComputeEngine.cpp  ComputeEngine.h  CpuChunkRenderer.cpp  CpuChunkRenderer.h  Formula.cpp  Formula.h  Graph.cpp  Graph.h  GraphProcessor.cpp  GraphProcessor.h  GraphRasterizer.cpp  GraphRasterizer.h  Interval.cpp  Interval.h  OpenCLChunkRenderer.cpp  OpenCLChunkRenderer.h  RasterizedPlot.h
src/Render/: FrameCommandBuffer.cpp  FrameCommandBuffer.h  GraphRasterizer.cpp  GraphRasterizer.h  Mesh.cpp  Mesh.h  RenderResourceManager.cpp  RenderResourceManager.h  Renderer.cpp  Renderer.h  TextAtlas.h  TextMeshesGenerator.cpp  TextMeshesGenerator.h  UploadPlanner.cpp  UploadPlanner.h
src/Scene/: MainScene.cpp  MainScene.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Tile/: TileCache.cpp  TileCache.h  TileMath.h
src/UI/: AxisLabels.cpp  AxisLabels.h  ConsoleInput.cpp  ConsoleInput.h  Grid.cpp  Grid.h  InputBox.cpp  InputBox.h  Plot.cpp  Plot.h  UIComponent.cpp  UIComponent.h
src/Util/: AsyncFrameInbox.h  Contracts.h  InputScenarioRunner.cpp  InputScenarioRunner.h  PerformanceProfiler.h  PipelineLog.h  StableHash.h  ThreadPool.cpp  ThreadPool.h
test/: TestComputeEngine.cpp  TestFormula.cpp
tests/: ArchitectureBoundaryTests.cpp  AsyncFrameInboxTests.cpp  BatchOptimizerTests.cpp  CMakeLists.txt  ChunkTreeTests.cpp  Common.h  ComputeCancellationTests.cpp  ContractTests.cpp  CpuPathBenchmark.cpp  EvaluatorTests.cpp  FormulaCompilerTests.cpp  FormulaTests.cpp  FrameBudgetControllerTests.cpp  FramePipelineTests.cpp  GraphGenerationTests.cpp  InputScenarioRunnerTests.cpp  InteractionControllerTests.cpp  MainThreadRequestMailboxTests.cpp  ParserTests.cpp  PresentationPlannerTests.cpp  RenderCommandTests.cpp  SchedulerBackendTests.cpp  ThreadPoolTests.cpp  TileCacheTests.cpp  TileMathTests.cpp  TilePlannerBackendTests.cpp  TileRuntimeTests.cpp  TokenizerTests.cpp  TrigSupportTests.cpp  VisualCoverBuilderTests.cpp
tools/: audit_equality.py
